--- a/website/CSS/style.css
+++ b/website/CSS/style.css
@@ -46,17 +46,23 @@ li a:hover {
     display: inline-block;
     margin-top: 10px;
 }
+
 .imagemnat{
     float: left;
     margin-right: 10px;
-    border-style:solid;
+    border-style: solid;
     border-color: var(--rosa);
 }
+
 .imagem{
     margin-right: 10px;
-    border-style:solid;
-    border-color: var(--rosa);
+    border: 2px solid var(--rosa);
 }
+
+.imagem:hover {
+    border: 2px solid var(--azul);
+}
+
 .titulo{
     float: left;
 }
@@ -67,4 +73,8 @@ li a:hover {
 
 .contato{
     font-size: 14px;
+}
+
+.projs{
+    font-size: 13px;
 }
