--- a/web/CSS/style.css
+++ b/web/CSS/style.css
@@ -1,187 +1,210 @@
-:root{
-    --pink: #F6DCE9;
-    --purple: #B0ADE4;
+:root {
+    --main-color-1: #69493D;
+    --main-color-2: #D2B59A;
     --background: #EEEEEE;
 }
 
+body {
+    background-color: var(--background);
+    color: black;
+    font-family: 'Epilogue', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.header {
+    background-color: white;
+}
+
+/* Barra de navegação */
+.navbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.navbar li {
+    display: inline;
+    margin-left: 15px;
+}
+
+.navbar li:first-child {
+    margin-right: auto;
+}
+
+.navbar li a {
+    display: block;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.navbar li a:hover {
+    text-decoration: underline;
+}
+
+/* Container inicial */
 .first-container {
     display: flex;
     align-items: center;
     justify-content: center;
     margin-right: 10%;
-
-    .first-title {
-        position: relative;
-        left: 13%;
-        h1 {
-            font-size: 120px;
-        }
-    }
-
-    .my-image {
-        img {
-            width: 470px;
-            height: 556px;
-            object-fit: cover;
-        }
-    }
+    flex-wrap: wrap;
 }
 
+.first-title h1 {
+    font-size: 50px;
+    text-align: center;
+}
+
+.my-image img {
+    width: 100%;
+    max-width: 470px;
+    height: auto;
+    object-fit: cover;
+}
+
+/* Conteúdo principal */
 .main-content {
-    margin-top: 50px;
-    margin-left: 60px;
+    margin: 20px;
+}
 
-    .floating-elements {
-        display: flex;
+.main-content .floating-elements {
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: space-between; 
+    gap: 20px; 
+}
 
-        .floating-left {
-            width: 60%;
+.main-content .floating-left {
+    width: 60%; 
+}
 
-            .about-me {
-                background-color: var(--pink);
-                border-radius: 10px;
-                height: 380px;
-                padding: 30px;
-                margin-bottom: 20px;
-                margin-right: 20px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-            }
-        
-            .qualifications {
-                background-color: var(--purple);
-                height: 380px;
-                padding: 30px;
-                border-radius: 10px;
-                margin-bottom: 20px;
-                margin-right: 30px;
-            }
-        }
+.main-content .floating-right {
+    width: 37%; 
+    display: flex;
+    flex-direction: column; 
+    justify-content: space-between; 
+    margin-bottom: 20px;
+}
 
-        .floating-right {
-            width: 37%;
+.floating-left .about-me, 
+.floating-left .qualifications {
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    color: white;
+}
 
-            .social-media {
-                background-color: white;
-                height: 250px;
-                padding:  20px 30px;
-                border-radius: 10px;
-                margin-bottom: 30px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                
-                .social-media-item {
-                    margin: 15px;
-                }
-            }
+.floating-left .about-me {
+    background-color: var(--main-color-1);
+}
 
-            .programming-languages {
-                background-color: var(--pink);
-                height: 540px;
-                padding: 20px 30px;
-                border-radius: 10px;
-                margin-bottom: 30px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                flex-direction: column;
+.floating-left .qualifications {
+    background-color: var(--main-color-2);
+}
 
-                img {
-                    display: block;
-                    margin: 20px;
-                    width: 15%;
-                }
-            }
-        }
+.floating-right .programming-languages {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    height: 75%;
+}
+
+.floating-right .social-media, 
+.floating-right .programming-languages {
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.floating-right .social-media {
+    padding: 50px 30px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    height: 25%;
+}
+
+.floating-right .programming-languages {
+    background-color: var(--main-color-1);
+    color: white;
+}
+
+.floating-right .programming-languages img {
+    width: 50px;
+    height: auto;
+    margin: 10px;
+}
+
+/* Projetos */
+.projects, .contact-form {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.contact-form {
+    background-color: var(--main-color-2);
+}
+
+.contact-form .form-input, 
+.contact-form .form-textarea {
+    width: 100%;
+    max-width: 500px;
+    border-radius: 5px;
+    padding: 10px;
+    border: none;
+    margin-bottom: 10px;
+}
+
+.contact-form .submit-btn {
+    background-color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 8px 10px;
+}
+
+/* Media Queries */
+@media (max-width: 768px) {
+    .first-title h1 {
+        font-size: 40px; 
     }
 
-    .projects {
-        background-color: white;
-        width: 92%;
-        height: 380px;
-        padding: 20px 30px;
-        border-radius: 10px;
-        margin-bottom: 20px;
-
-        .project-text {
-            margin-top: 25px;
-        }
-
-        .text-link:hover {
-            text-decoration: underline;
-        }
+    .my-image img {
+        max-width: 300px; 
     }
 
-    .contact-form {
-        background-color: var(--purple);
-        width: 92%;
-        height: 380px;
-        padding:  20px 30px;
-        border-radius: 10px;
-        margin-bottom: 20px;
+    .main-content .floating-elements {
+        flex-direction: column; 
+        align-items: center; 
+        gap: 20px; 
+    }
 
-        .form-input {
-            border-radius: 5px;
-            width: 530px;
-            height: 20px;
-            border: none;
-            padding: 10px;
-            margin-bottom: 10px;
-        }
-
-        .form-textarea {
-            border-radius: 5px;
-            width: 530px;
-            border: none;
-            padding: 10px;
-            margin-bottom: 10px;
-            font-family: 'Arial';
-        }
-
-        .submit-btn {
-            background-color: white;
-            border: none;
-            border-radius: 5px;
-            padding: 8px 10px;
-        }
+    .main-content .floating-left,
+    .main-content .floating-right {
+        width: 100%; 
     }
 }
 
-body{
-    background-color: var(--background);
-    color: black;
-    font-family: 'Epilogue';
-}
+@media (min-width: 1024px) {
+    .first-title h1 {
+        font-size: 120px;
+    }
 
-a{
-    text-decoration: none;
-    color: black;
-}
-
-/* barra de navegação */
-.navbar {
-    ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-    }
-    li {
-        display: inline;
-        float: right;
-    }
-    
-    li a {
-        display: block;
-        padding: 5px;
-        padding: 14px 16px;
-        text-decoration: none;
-    }
-    
-    li a:hover {
-        text-decoration: underline;
+    .floating-right .programming-languages img {
+        width: 15%;
     }
 }
-/*barra de navegação*/
